# survey-site

./: .gitignore  LICENSE  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: main_router.py
backend/app/api/endpoints/: category.py  token.py  user.py
backend/app/api/endpoints/__pycache__/: user.cpython-39.pyc.140377021555072
backend/app/core/: auth.py  config.py  dependencies.py
backend/app/crud/: __init__.py  base.py  crud_category.py  crud_form.py  crud_form_field.py  crud_user.py
backend/app/db/: config_db.py
backend/app/models/: __init__.py  category.py  form.py  form_field.py  token.py  user.py
database/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--2946634231245341223.wt  collection-2--2946634231245341223.wt  collection-4--2946634231245341223.wt  collection-7--2946634231245341223.wt  index-1--2946634231245341223.wt  index-3--2946634231245341223.wt  index-5--2946634231245341223.wt  index-6--2946634231245341223.wt  index-8--2946634231245341223.wt  index-9--2946634231245341223.wt  sizeStorer.wt
database/diagnostic.data/: metrics.2022-02-23T02-31-27Z-00000  metrics.2022-02-23T02-31-43Z-00000  metrics.2022-02-23T02-38-38Z-00000
frontend/: .eslintrc.js  Dockerfile  README.md  package-lock.json  package.json  quasar.conf.js
frontend/src/: App.vue  api.ts  main.ts  utils.ts  validations.ts
frontend/src/boot/: axios.ts
frontend/src/components/: FormEdit.vue  FormFieldEdit.vue  FormPreview.vue  HelloWorld.vue  NotificationManager.vue  PieChart.vue  (+1 more)
(+28 files in other folders)
