[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ian Almeida <ian.almeida@edu.univali.br>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
pymongo = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^1.9.0"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
